@@ -1160,9 +1160,9 @@ setMethod(f="plot",
               invisible()
           })
 
-##' DEVELOPERS: please pattern functions and documentation on the 'ctd' code, for uniformity.
-##' DEVELOPERS: Youi will need to change the docs, and the 3 spots in the code
-##' DEVELOPERS: marked '# DEVELOPER 1:', etc.
+## DEVELOPERS: please pattern functions and documentation on the 'ctd' code, for uniformity.
+## DEVELOPERS: You will need to change the docs, and the 3 spots in the code
+## DEVELOPERS: marked '# DEVELOPER 1:', etc.
 #' @title Handle flags in ARGO objects
 #' @details
 #' If \code{flags} and \code{actions} are not provided, the
